<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:text="@string/new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_product_header" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textStyle="bold"
            android:textAllCaps="true" android:textSize="30sp" android:typeface="sans"
            android:fontFamily="sans-serif-black"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_product_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/upload"
            app:layout_constraintVertical_bias="0.937"/>
    <TextView
            android:text="@string/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_name" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/new_product_header" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.092"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/product_name_value"
            android:hint="@string/product_name_hint"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.153"/>
    <TextView
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_category" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
    />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_type_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.08"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/product_category">
    </Spinner>

    <TextView
            android:text="@string/subcategory"
            android:layout_width="79dp"
            android:layout_height="19dp"
            android:id="@+id/product_subcategory"
            app:layout_constraintStart_toEndOf="@+id/product_category" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name_value"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subcategory_type_value"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/product_subcategory"
            app:layout_constraintStart_toEndOf="@+id/category_type_value" android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp">
    </Spinner>

    <TextView
            android:text="@string/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_store" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name_value" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" android:layout_marginRight="100dp"
            app:layout_constraintStart_toEndOf="@+id/product_subcategory" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.979"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/store_value"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/product_store"
            app:layout_constraintStart_toEndOf="@+id/subcategory_type_value" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
    </Spinner>

    <TextView
            android:text="@string/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_image" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/product_cost_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.092"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/placeholder"
            android:id="@+id/product_image_value"
            app:layout_constraintTop_toBottomOf="@+id/product_image" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.114"/>
    <Button
            android:text="@string/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/product_image_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.091"/>
    <TextView
            android:text="@string/product_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_cost" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/subcategory_type_value"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.089"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/product_cost_value" android:hint="@string/cost_hint"
            app:layout_constraintTop_toBottomOf="@+id/product_cost" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.153"/>

</android.support.constraint.ConstraintLayout>