<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/navigation_container">

    <TextView
            android:text="@string/new_category"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_category_header"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:typeface="sans"
            android:fontFamily="sans-serif-black" />

    <TextView
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/new_category_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.121"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName|textAutoComplete"
            android:hint="@string/name_hint"
            android:ems="10"
            android:id="@+id/category_name_value"
            app:layout_constraintTop_toBottomOf="@+id/category_name"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.192"
            android:layout_marginTop="12dp"/>

    <TextView
            android:text="@string/category_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_image"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/category_name_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.119"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/placeholder"
            android:id="@+id/category_image_value"
            android:scaleType="fitXY"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/category_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.142"/>
    <Button
            android:text="@string/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_image"
            app:layout_constraintTop_toBottomOf="@+id/category_image_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.114"
            android:layout_marginTop="12dp"/>

    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_category_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/upload_image"
            app:layout_constraintVertical_bias="0.965"/>

</android.support.constraint.ConstraintLayout>