<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/product_item"
            android:layout_width="wrap_content"
            android:padding="2dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/product_image"
                    android:src="@drawable/placeholder"
                    android:layout_marginTop="16dp"
                    android:background="#EA5C46"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" card_view:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/product_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store"
                    android:layout_marginTop="16dp"
                    android:textSize="22sp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    card_view:layout_constraintStart_toEndOf="@+id/product_image"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    card_view:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_cost"
                    android:text="@string/cost"
                    card_view:layout_constraintStart_toEndOf="@+id/product_image"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" card_view:layout_constraintTop_toBottomOf="@+id/product_store_name"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_cost_value"
                    android:hint="@string/hyperlocal_cost"
                    card_view:layout_constraintStart_toEndOf="@+id/product_cost" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintBaseline_toBaselineOf="@+id/product_cost"/>

            <ImageView
                    android:id="@+id/product_store_location_icon"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_menu_location"
                    android:layout_height="20dp"
                    card_view:layout_constraintStart_toEndOf="@+id/product_image"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/product_cost" android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintVertical_bias="0.272"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_store_location"
                    android:hint="@string/hyperlocal_address"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/product_cost_value"
                    android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    card_view:layout_constraintStart_toEndOf="@+id/product_store_location_icon"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintVertical_bias="0.25"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>